# embedded-camera-iq-testbench

./: .env.example  .gitignore  LICENSE  Makefile  README.md  requirements-dev.txt
camera_gateway_cpp/: CMakeLists.txt  README.md
camera_gateway_cpp/include/: CameraDevice.hpp  FrameProvider.hpp  HttpServer.hpp  ImageDegradation.hpp  PowerModel.hpp  TelemetryModel.hpp  TelemetryParser.hpp  TelemetryReader.hpp
camera_gateway_cpp/src/: CameraDevice.cpp  FrameProvider.cpp  HttpServer.cpp  ImageDegradation.cpp  PowerModel.cpp  TelemetryModel.cpp  TelemetryParser.cpp  TelemetryReader.cpp  main.cpp
docs/: FORME.docx  architecture.md  bug_reports.md  camera_image_processing.md  cv_resume_snippets.md  power_budget.md  pycharm_setup.md  setup.md  test_cases.md  test_plan.md  troubleshooting.md  visual_studio_build.md  zephyr_setup.md
firmware_zephyr/: CMakeLists.txt  README.md  prj.conf
firmware_zephyr/include/: app_state.h  camera_control.h  fault_injection.h  i2c_als_sensor.h  power_budget.h  spi_image_sensor.h  telemetry_protocol.h  uart_protocol.h
firmware_zephyr/src/: app_state.c  camera_control.c  fault_injection.c  i2c_als_sensor.c  main.c  power_budget.c  spi_image_sensor.c  telemetry_protocol.c  uart_protocol.c
python_test_station/: README.md  __init__.py  requirements.txt
python_test_station/app/: __init__.py  camera_client.py  config.py  image_degradation.py  image_pipeline.py  iq_metrics.py  main.py  presentation.py  report_generator.py  schemas.py  storage.py  telemetry_parser.py  verdict.py
scripts/: create_sample_images.py
(+21 files in other folders)
